<resources>
    <string name="app_name" translatable="false">Arduino Factory</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Favoris</string>
    <string name="title_news">Nouveauté</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_page__parametre" translatable="false">Page_Parametre</string>
    <string name="myCoolButton" translatable="false">Page_Parametre</string>
    <string name="mail" translatable="false">Page_Parametre</string>
    <string name="propos" translatable="false">Page_Parametre</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_outils_telecommande_tuto" translatable="false">MainActivity</string>
    <string name="page_accueil_cours">Course</string>
    <string name="page_accueil_outils">Tools</string>
    <string name="page_accueil_achat">Purchases</string>
    <string name="page_accueil_contact">Contact</string>
    <string name="page_contact_site_internet">Our web site</string>
    <string name="page_contact_contactez_nous">Contact us</string>
    <string name="page_contact_a_propos">About</string>
    <string name="page_a_propos_title">Who are we ?</string>
    <string name="page_a_propos_qui">We are 4 students from the Esme Sudria engineering school:</string>
    <string name="page_a_propos_title_2">Join us</string>
    <string name="page_a_propos_title_3">Thanks</string>
    <string name="page_a_propos_merci">Thanks to our teacher Yves Benabou for his help</string>
    <string name="contactez_nous_prenom">First name:</string>
    <string name="contactez_nous_nom">Name:</string>
    <string name="contactez_nous_mail">Mail :</string>
    <string name="contactez_nous_obj">Object :</string>
    <string name="contactez_nous_message">Message :</string>
    <string name="contactez_nous_envoyer">Send</string>
    <string name="page_outils_title_1">Resistance tools</string>
    <string name="page_outils_title_2">Remote control tools</string>
    <string name="page_outils_title_3">Artificial intelligence</string>
    <string name="page_outils_resistance">Stop the hassle of calculating the value of a resistor</string>
    <string name="page_outils_telecommande">Use a remote built into your phone</string>
    <string name="page_outils_ia">Our AI recognizes your Arduino components</string>
    <string name="resistance_tool_title">Resistance calculator</string>
    <string name="resistance_4_anneaux">4 rings</string>
    <string name="resistance_5_anneaux">5 rings</string>
    <string name="resistance_6_anneaux">6 rings</string>
    <string name="resistance_help">Which direction is the resistance?    The ring closest to the edge of the resistor is the first ring, and the last ring is closest to the center.</string>
    <string name="telecommande_tuto_step_1">Step 1: buy a bluetooth module</string>
    <string name="telecommande_tuto_step_2">Step 2: upload the code to the Arduino board</string>
    <string name="telecommande_tuto_step_3">Step 3: wire the module</string>
    <string name="telecommande_tuto_step_4">Step 4: connect the module</string>
    <string name="telecommande_tuto_step_5">Step 5: access the remote control</string>
    <string name="telecommande_tuto_step_1_buy">Buy this unit</string>
    <string name="telecommande_tuto_step_2_copyPaste">Copy the code to Arduino, add the functions you want to operate the components of your choice</string>
    <string name="telecommande_tuto_step_2_seeCode">See the code to upload</string>
    <string name="telecommande_tuto_step_4_bluetooth">Activate your phone\'s bluetooth, pair the sensor in its settings</string>
    <string name="telecommande_tuto_step_5_bluetooth">In the remote control tools select the module in the list of bluetooth devices that is displayed</string>
    <string name="outils_ia_classification">Classified as:</string>
    <string name="outils_ia_confidences">Confidences:</string>
    <string name="lien_url">https://arduinofactory.fr/</string>
    <string name="lien_youtube">https://www.youtube.com/channel/UCXKbpmuVZV6h8B0Frr0dtxA</string>
    <string name="lien_instagram">https://www.instagram.com/arduino.factory/?hl=fr</string>
    <string name="nom1">• Camille Bayon de Noyer</string>
    <string name="nom2">• Cedric Chhunon</string>
    <string name="nom3">• Pierre Huruguen</string>
    <string name="nom4">• Julien Gouban</string>
    <string name="lien_kit_elegoo">https://amzn.to/38Rlsl1</string>
    <string name="lien_carte_arduino">https://amzn.to/3typI0J</string>
    <string name="lien_capteur_distance">https://amzn.to/3ty0oI3</string>
    <string name="lien_bouton_poussoir">https://amzn.to/3cEPaLa</string>
    <string name="lien_resistance">https://amzn.to/38UpVn3</string>
    <string name="lien_joystick">https://amzn.to/3lAU3ZD</string>
    <string name="lien_capteur_son">https://amzn.to/3c1Ur0m</string>
    <string name="lien_buzzer">https://amzn.to/3sa2iyr</string>
    <string name="lien_capteur_inclinaison">https://amzn.to/3ON8JF8</string>
    <string name="lien_photoresistance">https://amzn.to/3raz1lU</string>
    <string name="lien_humidite">https://amzn.to/2PgFrCD</string>
    <string name="lien_motorshield">https://amzn.to/3bWX3wx</string>
    <string name="lien_carte_mega">https://amzn.to/2OL1SjC</string>
    <string name="lien_carte_nano">https://amzn.to/30YsU9A</string>
    <string name="lien_carte_raspberry">https://amzn.to/2OVNSUj</string>
    <string name="lien_kit_raspberry">https://amzn.to/41TzvCn</string>
    <string name="lien_machine_souder">https://amzn.to/41vRuP1</string>
    <string name="lien_etain">https://amzn.to/3vJkGjI</string>
    <string name="lien_kit_soudure">https://amzn.to/3T1bGmT</string>
    <string name="lien_denudeur_fil">https://amzn.to/3c2NT1C</string>
    <string name="lien_moteur_dc">https://amzn.to/3r21pXx</string>
    <string name="lien_servomoteur">https://amzn.to/3lw1l0R</string>
    <string name="lien_led">https://amzn.to/3c2W0Lz</string>
    <string name="lien_breadboard">https://amzn.to/3c1Jdc8</string>
    <string name="lien_prototype">https://amzn.to/3I7RF8N</string>
    <string name="lien_module_wifi">https://amzn.to/3vDmPNY</string>
    <string name="lien_module_bluetooth">https://amzn.to/3tKZCI9</string>
    <string name="kit_elegoo">Kit Elegoo</string>
    <string name="carte_arduino">Carte Arduino</string>
    <string name="capteur_distance">Capteur distance</string>
    <string name="bouton_poussoir">Bouton poussoir</string>
    <string name="resistance">Résistance</string>
    <string name="joystick">Joystick</string>
    <string name="capteur_son">Capteur de son</string>
    <string name="buzzer">Buzzer</string>
    <string name="capteur_inclinaison">Capteur Inclinaison</string>
    <string name="photoresistance">Photorésistance</string>
    <string name="humidite">Humidité</string>
    <string name="motorshield">Motorshield</string>
    <string name="carte_mega">Carte méga</string>
    <string name="carte_nano">Carte nano</string>
    <string name="carte_raspberry">Carte raspberry</string>
    <string name="kit_raspberry">Kit raspberry</string>
    <string name="machine_souder">Machine à souder</string>
    <string name="etain">Étain</string>
    <string name="kit_soudure">Kit soudure</string>
    <string name="denudeur_fil">Dénudeur de fil</string>
    <string name="moteur_dc">Moteur DC</string>
    <string name="servomoteur">Servomoteur</string>
    <string name="led">LED</string>
    <string name="breadboard">Breadboard</string>
    <string name="prototype">Prototype</string>
    <string name="module_wifi">Module WiFi</string>
    <string name="module_bluetooth">Module Bluetooth</string>
    <string name="hint_prenom">Entrer votre prénom</string>
    <string name="hint_nom">Entrer votre nom</string>
    <string name="hint_email">Email invalide</string>
    <string name="hint_objet">Entrer votre objet</string>
    <string name="hint_message">Entrer votre message</string>
    <string name="send_email_chooser_title">Envoi de email...</string>
    <string name="email_subject_label">Objet :</string>
    <string name="email_message_label">Message :</string>
    <string name="email_prenom_label">Prénom :</string>
    <string name="email_nom_label">Nom :</string>
    <string name="email_email_label">Email :</string>
        <string-array name="classes_array">
            <item>7 segments</item>
            <item>Capteur humidité</item>
            <item>Ecran Lcd</item>
            <item>Led</item>
            <item>Résistance</item>
            <item>Servo Moteur</item>
        </string-array>
    <string name="outil_resistance">Outils resistance</string>
    <string name="outil_telecommande">Outils télécommande</string>
    <string name="cours">Cours</string>
    <string name="pas_de_favoris">Pas de favoris défini</string>
    <string name="url_amazon_telecommande">https://amzn.to/3tKZCI9</string>
    <string name="url_code_telecommande">https://arduinofactory.fr/code-telecommande-bluetooth/</string>
    <string name="premier_chiffre_significatif">1er chiffre significatif</string>
    <string name="deuxieme_chiffre_significatif">2eme chiffre significatif</string>
    <string name="troisieme_chiffre_significatif">3eme chiffre significatif</string>
    <string name="mutiplicateur">multiplicateur</string>
    <string name="image_outils_description">Icône outils</string>
    <string name="resistance_image">Image de resistance</string>
    <string name="IA_image">page sur IA</string>
    <string name="IA_aide">Aide</string>
    <string name="IA_texte1">Notre IA reconnait les composants suivants:</string>
    <string name="IA_texte2">7_segments, capteur_humidite, ecran_lcd, led, resistance, servo_moteur</string>
    <string name="IA_texte3">Nous travaillons encore dessus pour vous fournir une version toujours plus performante.</string>
    <string name="telecommande_image">page sur le telecommande bluetooth</string>
    <string name="telecommande_deconnection">Déconnection</string>
    <string name="telecommande_changement">Changer de telécommande</string>
    <string name="telecommande_tutoriel">Tutoriel</string>
    <string name="preference_prenom">Votre Prénom</string>
    <string name="preference_nom">Votre Nom</string>
    <string name="preference_soutien">Soutenez nous</string>
    <string name="preference_note">Noter notre application</string>
    <string name="preference_information">Information  application</string>
    <string name="preference_version">Version Application</string>
    <string name="livre_titre">📘 Notre livre pour débuter sur Arduino !</string>
    <string name="livre"> Nous avons écrit un livre sur Arduino pour vous aider à débuter dans le monde de l’électronique. Dans notre cours vous retrouverez des cours, des conseils et plein de projets sur Arduino pour apprendre en s’amusant.</string>
    <string name="liendulivre"> 👉 Lien du livre (FR)</string>
    <string name="join_us">🤝 Rejoignez-nous</string>
    <string name="site_text">🌍 Notre site</string>
    <string name="youtube_text">▶️ YouTube</string>
    <string name="instagram_text">📸 Instagram</string>
</resources>