
        <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="90dp">

            <PreferenceCategory
                android:key="setting1"
                android:title="Profil">
                <EditTextPreference
                    app:key="Prénom"
                    app:title="@string/preference_prenom"
                    app:useSimpleSummaryProvider="true" />
                <EditTextPreference
                    app:key="Nom"
                    app:title="@string/preference_nom"
                    app:useSimpleSummaryProvider="true" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="reseau"
                android:title="@string/preference_soutien">
                <Preference
                    android:key="@string/myCoolButton"
                    android:title="@string/preference_note"
                    android:summary="Google play" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="Vers"
                android:title="@string/preference_information">
                <EditTextPreference
                    app:key="@string/preference_version"
                    app:title="Version 1.0 "
                    app:useSimpleSummaryProvider="false" />
            </PreferenceCategory>
        </PreferenceScreen>
