<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <item
        android:id="@+id/coeur_vide"
        android:orderInCategory="100"
        android:title="@string/telecommande_image"
        android:icon="@drawable/coeur_vide"
        app:showAsAction="always" />

    <item
        android:title="@string/telecommande_deconnection"
        android:id="@+id/nav_deconnection"/>
    <item android:title="@string/telecommande_changement"
        android:id="@+id/nav_telecommande"/>
    <item android:title="@string/telecommande_tutoriel"
        android:id="@+id/nav_tuto"/>

</menu>