<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Section Livre -->
        <TextView
            android:id="@+id/livreTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livre_titre"
            android:textSize="20sp"
            android:paddingTop="24dp"
            android:textStyle="bold"
            android:paddingBottom="24dp" /><!-- titre avec plus d'espace -->


        <TextView
            android:id="@+id/livreFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livre"
            android:textSize="16sp"
            android:paddingBottom="32dp"/> <!-- plus d'espace après texte pour séparer les sections -->

        <TextView
            android:id="@+id/lienduLivre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liendulivre"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:paddingBottom="32dp" />

        <!-- Section Join Us -->
        <TextView
            android:id="@+id/rejoignez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_us"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/> <!-- titre Join Us -->

        <TextView
            android:id="@+id/lien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site_text"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube_text"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/instragram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram_text"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>
    </LinearLayout>
</ScrollView>
