<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FCFE"
    tools:context=".outils.Outils_telecommande_tuto">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telecommande_tuto_step_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#0B789C"
                android:textStyle="bold"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_achat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#00000000"
                android:text="@string/telecommande_tuto_step_1_buy"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="15dp"
                app:cornerRadius="50dp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/telecommande_tuto_step_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#0B789C"
                android:textStyle="bold"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telecommande_tuto_step_2_copyPaste"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="15dp" />
            <Button
                android:id="@+id/button_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#00000000"
                android:text="@string/telecommande_tuto_step_2_seeCode"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="15dp"
                app:cornerRadius="50dp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telecommande_tuto_step_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#0B789C"
                android:textStyle="bold"
                android:textSize="20dp" />


            <ImageView
                android:id="@+id/image_cablage"
                android:layout_width="wrap_content"
                android:layout_height="225dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/telecommande_tuto_cablage" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/telecommande_tuto_step_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#0B789C"
                android:textStyle="bold"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telecommande_tuto_step_4_bluetooth"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/telecommande_tuto_step_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textColor="#0B789C"
                android:textSize="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telecommande_tuto_step_5_bluetooth"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="15dp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>